updated the backend to allow manual verfification